--- a/index.html
+++ b/index.html
@@ -22,10 +22,11 @@
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">SignIn</a>
+                <button type="button" class="btn btn-primary"><a class="nav-link" href="#">SignIn</a></button>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#" data-bs-toggle="modal" data-bs-target="#signUpModal">SignUp</a>
+                <a class="nav-link" href="#" 
+                data-bs-toggle="modal" data-bs-target="#signUpModal">SignUp</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
