--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="bootstrap.min.css">
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="assets/references/bootstrap.min.css">
+
+    
     <title>AquaMetrics</title>
 </head>
 <body>
@@ -22,7 +23,7 @@
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <button type="button" class="btn btn-primary"><a class="nav-link" href="#">SignIn</a></button>
+                <a id="btnSignIn" class="nav-link" href="#">SignIn</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#" 
@@ -64,8 +65,10 @@
 
     <script src="https://www.gstatic.com/firebasejs/8.6.5/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.6.5/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.6.5/firebase-database.js"></script>
-    <script type="text/javascript" src="bootstrap.min.js"></script> 
-    <script src="JS/app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.6.5/firebase-firestore.js"></script>
+    <script src ="assets/references/bootstrap.min.js"></script>
+    <script src="assets/JS/registro.js"></script>
+    <script src="assets/JS/app.js"></script>
+    <scr
 </body>
 </html>
