--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   </div>
 
 
-
+  <h1 class ="h1">Nombre</h1>
     <script src="https://www.gstatic.com/firebasejs/8.6.5/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.6.5/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.6.5/firebase-firestore.js"></script>
