--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
           <form action="" id="signUpForm">
             <div class="form-group">
               <input type="text" name="" id="txSignUp">
+              <input type="text" name="" id="txSignUp">
             </div>
           </form>
         </div>
