--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
   <script src="https://www.gstatic.com/firebasejs/8.6.5/firebase-auth.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.6.5/firebase-firestore.js"></script>
   <script src="assets/references/bootstrap.min.js"></script>
+  <script src="assets/JS/firebase.js"></script>
   <script src="assets/JS/registro.js"></script>
   <script src="assets/JS/login.js"></script>
   <script src="assets/JS/app.js"></script>
