--- a/index.html
+++ b/index.html
@@ -2,92 +2,90 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="assets/references/bootstrap.min.css">
-  <link rel="stylesheet" href="assets/css/styles.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/references/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
 
-  <title>AquaMetrics</title>
+    <title>AquaMetrics</title>
 </head>
 
 <body>
-  <!-- barra de navegacion -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">AquaMetrics</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <!-- barra de navegacion -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">AquaMetrics</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
-          </li>
-          <li class="nav-item">
-            <a id="btnSignIn" class="nav-link" href="#">SignIn</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#" data-bs-toggle="modal" data-bs-target="#signUpModal">SignUp</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-  <!-- modal es la ventana emergente para logerarse -->
-  <!-- Button trigger modal -->
-  <!-- Modal -->
-  <div class="modal fade" id="signUpModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">¡Bienvenido!</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-          <label id='loginBtn' class ="btn btn-light">Login</label>
-          <label id='registroBtn' class ="btn btn-light">Registro</label>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
 
 
-          <form action="" id="signUpForm">
-            <div class="form-group">
-              <div class="mb-3 row">
-                <label id="labelEmail" for="staticEmail" class="col-sm-2 col-form-label">Email</label>
-                <div class="col-sm-10">
-                  <input type="text"  class="form-control" id="inputEmail" placeholder="email@example.com">
-                </div>
-              </div>
-              <div class="mb-3 row">
-                <label id="labelPassword" for="inputPassword" class="col-sm-2 col-form-label">Password</label>
-                <div class="col-sm-10">
-                  <input type="password" class="form-control" id="inputPassword">
-                </div>
-              </div>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#" data-bs-toggle="modal" data-bs-target="#signUpModal"><i class="fas fa-user"></i></i> Login or Signup</a>
+                    </li>
+
+                </ul>
             </div>
-          </form>
         </div>
-        <div class="modal-footer">
-          <button id='btnGoogle' class ="btn btn-primary ">Google</button>
-          <button type="button" class="btn btn-primary">Log in</button>
+    </nav>
+    <!-- modal es la ventana emergente para logerarse -->
+    <!-- Button trigger modal -->
+    <!-- Modal -->
+    <div class="modal fade" id="signUpModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">¡Bienvenido!</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <label id='loginBtn' class="btn btn-light">Login</label>
+                    <label id='registroBtn' class="btn btn-light">Registro</label>
+
+
+                    <form action="" id="signUpForm">
+                        <div class="form-group">
+                            <div class="mb-3 row">
+                                <label id="labelEmail" for="staticEmail" class="col-sm-2 col-form-label">Email</label>
+                                <div class="col-sm-10">
+                                    <input type="text" class="form-control" id="inputEmail" placeholder="email@example.com">
+                                </div>
+                            </div>
+                            <div class="mb-3 row">
+                                <label id="labelPassword" for="inputPassword" class="col-sm-2 col-form-label">Password</label>
+                                <div class="col-sm-10">
+                                    <input type="password" class="form-control" id="inputPassword">
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <label id='btnGoogle' class="btn btn-primary "><i class="fab fa-google"></i> Google</label>
+                    <button type="button" class="btn btn-primary">Log in</button>
+
+
+                </div>
+            </div>
         </div>
-      </div>
     </div>
-  </div>
 
 
-  <h1 id="h1UserName" class="h1">Nombre</h1>
-  <script src="https://www.gstatic.com/firebasejs/8.6.5/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.6.5/firebase-auth.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.6.5/firebase-firestore.js"></script>
-  <script src="assets/references/bootstrap.min.js"></script>
-  <script src="assets/JS/firebase.js"></script>
-  <script src="assets/JS/registro.js"></script>
-  <script src="assets/JS/login.js"></script>
-  <script src="assets/JS/app.js"></script>
-  <scr </body>
+    <h1 id="h1UserName" class="h1">Nombre</h1>
+    <script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-firestore.js"></script>
+    <script src="https://kit.fontawesome.com/5fc4fd5412.js" crossorigin="anonymous"></script>
+    <script src="assets/references/bootstrap.min.js"></script>
+    <script src="assets/JS/firebase.js"></script>
+    <script src="assets/JS/registro.js"></script>
+    <script src="assets/JS/login.js"></script>
+    <script src="assets/JS/app.js"></script>
+    <script src="assets/JS/addMeter.js"></script>
+
+    <scr </body>
 
 </html>
