Añadido de un poco de mierdas

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/references/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/styles.css">
-
+    <script src="assets/references/jquery.js"></script>
     <title>AquaMetrics</title>
 </head>
 
@@ -23,8 +23,8 @@
                 <ul class="navbar-nav ms-auto">
 
 
-                    <li class="nav-item">
-                        <a class="nav-link" href="#" data-bs-toggle="modal" data-bs-target="#signUpModal"><i class="fas fa-user"></i></i> Login or Signup</a>
+                    <li id="listaNavBar" class="nav-item">
+                        <a id="labelLogin" class="nav-link" href="#"><i id="labelLoginImage" class="fas fa-user"></i></i> <span id="labelLoginTexto">Login or Signup</span></a>
                     </li>
 
                 </ul>
