Login con foto de usuario

--- a/index.html
+++ b/index.html
@@ -20,11 +20,12 @@
         <span class="navbar-toggler-icon"></span>
       </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
+                <ul id="listaNavBar" class="navbar-nav ms-auto">
 
 
-                    <li id="listaNavBar" class="nav-item">
-                        <a id="labelLogin" class="nav-link" href="#"><i id="labelLoginImage" class="fas fa-user"></i></i> <span id="labelLoginTexto">Login or Signup</span></a>
+                    <li class="nav-item">
+
+                        <a id="labelLogin" class="nav-link" href="#"><i id="labelLoginImage" class="fas fa-user"></i></i> <span id="labelLoginTexto">Login or SignUp</span></a>
                     </li>
 
                 </ul>
@@ -35,7 +36,7 @@
     <!-- Button trigger modal -->
     <!-- Modal -->
     <div class="modal fade" id="signUpModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
+        <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title" id="exampleModalLabel">¡Bienvenido!</h5>
