--- a/index.html
+++ b/index.html
@@ -65,6 +65,12 @@
                     </form>
                 </div>
                 <div class="modal-footer">
+                    <div class="form-check">
+                        <input class="form-check-input ms-auto" type="checkbox" value="" id="flexCheckDefault">
+                        <label class="form-check-label ms-auto" for="flexCheckDefault">
+                          Default checkbox
+                        </label>
+                    </div>
                     <label id='btnGoogle' class="btn btn-primary "><i class="fab fa-google"></i> Google</label>
                     <button type="button" class="btn btn-primary">Log in</button>
 
